Fix #257 - Write Part 2 Step 6 DM56 (#460)